--- a/requirements.txt
+++ b/requirements.txt
@@ -4,16 +4,11 @@ itsdangerous==2.0.1
 Jinja2==3.0.3
 MarkupSafe==2.0.1
 Werkzeug==2.0.2
-certifi==2021.10.8
 charset-normalizer==2.0.9
 mysql-connector-python==8.0.27
 requests==2.26.0
 six==1.16.0
 PyMySQL==1.0.2
-render_template
-request 
-abort
-jsonify
-pyautogui
+PyAutoGUI==0.9.53
 
 
